# chatbot.ai-

./: .funcignore  .gitignore  LOCAL_SETUP.md  PDF_DATA_TRANSFORMATION.md  PDF_UPLOAD_QUICK_REFERENCE.md  PDF_UPLOAD_VERIFICATION.md  QUICK_START_ACTION_GUIDE.md  README.md  SYSTEM_ARCHITECTURE.md  UPLOAD_QUEUE_DOCUMENTATION.md  UPLOAD_QUEUE_QUICKSTART.md  VERIFICATION_IMPLEMENTATION_SUMMARY.md  check_vectors.py  clear_vectors.py  comprehensive_test.py  docker-compose.yml  dockerfile  dockerignore  dump.rdb  pyproject.toml  reinit.py  sample_content.txt  startup.sh  test_chunking.py  test_queue_upload.py  test_retrieve_endpoint.py  test_retrieve_now.py  test_retrieve_simple.py  test_upload.txt  test_upload_endpoint.py  tmp_probe_8000.py  upload_sample.py  verify_pdf_upload.py  worker.py
.github/workflows/: main_chatbot-api-nex.yml
app/: main.py  requirements.txt  startup.sh
app/api/routes/: ingest.py  upload.py  websocket_chat.py
app/app/api/routes/: chat.py
app/app/ingestion/: chunker.py  pipeline.py
app/app/retrieval/: embeddings.py  vector_store.py
app/app/services/: connection_manager.py  upload_tasks.py  web_search.py
app/app/utils/: encryption.py  file_processor.py  metrics.py
app/config/: settings.py
app/ingestion/: scraper.py
app/services/: intent_classifier.py  llm_generator.py  orchestrator.py  queue.py
testzip/: requirements.txt
testzip/app/ingestion/: cleaner.py
testzip/app/retrieval/: reranker.py
testzip/app/services/: cache.py  mongodb.py
testzip/app/utils/: logger.py
