[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexo-chatbot"
version = "1.0.0"
description = "A comprehensive chatbot application with RAG capabilities"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "google-genai==1.10.0",
    "qdrant-client==1.11.3",
    "redis==5.0.8",
    "motor==3.5.1",
    "pymongo==4.8.0",
    "cryptography==43.0.1",
    "httpx==0.28.1",
    "playwright==1.47.0",
    "sentence-transformers==3.1.1",
    "tiktoken==0.7.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.26",
    "pypdf==4.3.1",
    "python-docx==1.1.2",
    "openpyxl==3.1.5",
    "python-pptx==1.0.2",
    "starlette==0.38.2",
    "requests==2.32.3",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app" = ["**/*.py"]